--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,8 +9,9 @@
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" 
+      content="width=device-width, maximum-scale=1.5">
+    
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
